src/App.css
/* ... */
@media (max-width: 991px) {
  .navbar {
    background-color: #121212;
  }

  .logo-icon {
    width: 50px;
  }

  .navbar .navbar-nav .nav-link {
    text-align: center;
    font-size: 30px !important;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3) !important;
    padding: 20px 0 !important;
  }

  .navbar .navbar-nav .nav-link:nth-child(1) {
    margin-top: 30px;
  }

  .navbar .navbar-nav .nav-link:nth-last-child(1) {
    margin-bottom: 30px;
    border-bottom: none !important;
  }

  .navbar-dropdown .btn-success {
    margin-right: 0;
  }

  .navbar-dropdown .dropdown-menu.show {
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
  }

  .navbar-text {
    display: flex !important;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 100px 0 25px 0;
  }
}

/* Banner */

.banner {
  margin-top: 0;
  padding: 260px 0 100px 0;
  background-image: url("./assets/images/bg-banner.jpg");
  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;
}

.banner .tagline {
  font-weight: 700;
  letter-spacing: 0.8px;
  padding: 8px 10px;
  background: linear-gradient(
    90deg,
    rgba(239, 50, 217, 0.3) 0%,
    rgba(137, 255, 253, 0.3) 100%
  );
  border: 1px solid rgba(255, 255, 255, 0.5);
  font-size: 20px;
  margin-bottom: 16px;
  display: inline-block;
}

.banner h1 {
  font-size: 55px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1;
  margin-bottom: 20px;
  display: block;
}

.banner h1 span.wrap {
  font-size: 40px;
}

.banner p {
  color: #b8b8b8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  width: 96%;
}

.banner-btn-download {
  text-decoration: none;
}

.banner button {
  font-weight: 700;
  color: #fff;
  border: 1px solid #fff;
  padding: 18px 34px;
  font-size: 18px;
  position: relative;
  background-color: transparent;
  transition: 0.3s ease-in-out;
  width: 350px;
  letter-spacing: 0.8px;
  margin-top: 60px;
  font-size: 20px;
}

.banner button svg {
  font-size: 25px;
  margin-left: 10px;
  line-height: 1;
}

.banner button span {
  z-index: 1;
}

.banner button::before {
  content: "";
  width: 0%;
  height: 100%;
  position: absolute;
  background-color: #fff;
  left: 0;
  top: 0;
  transition: 0.3s ease-in-out;
}

.banner button:hover {
  color: #121212;
}

.banner button:hover::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
}

.banner img {
  width: 100%;
  animation: updown 3s linear infinite;
}

@keyframes updown {
  0% {
    transform: translateY(-20px);
  }
  50% {
    transform: translateY(20px);
  }
  100% {
    transform: translateY(-20px);
  }
}

.txt-rotate > .wrap {
  border-right: 0.08em solid #666;
}

/* Skills */

.skill {
  padding: 0 0 50px 0;
  position: relative;
}

.skill-box {
  background: #151515;
  border-radius: 64px;
  text-align: center;
  padding: 60px 50px;
  margin-top: -60px;
}

.skill h2 {
  font-size: 45px;
  font-weight: 700;
}

.skill p {
  color: #b8b8b8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}

.skill-slider {
  width: 80%;
  margin: 0 auto;
  position: relative;
}

.skill-slider .item {
  width: 100%;
}

.skill-slider .item img {
  width: 40%;
  margin: 0 auto 15px auto;
}

.react-multi-carousel-track {
  align-items: flex-end;
}

.react-multiple-carousel__arrow {
  justify-content: center !important;
  align-items: center !important;
  background: none !important;
}

.react-multiple-carousel__arrow:hover {
  background: rgba(0, 0, 0, 0.5) !important;
}

.react-multiple-carousel__arrow--left {
  left: calc(1px) !important;
}

.react-multiple-carousel__arrow--right {
  right: calc(1px) !important;
}

.background-image-left {
  top: 28%;
  position: absolute;
  bottom: 0;
  width: 40%;
  z-index: -4;
}

/* Projects */

.project {
  padding: 80px 0;
  position: relative;
}

.project h2 {
  font-size: 45px;
  font-weight: 700;
  text-align: center;
}

.project p {
  color: #b8b8b8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px auto 30px auto;
  text-align: center;
  width: 56%;
}

.project .nav.nav-pills {
  width: 72%;
  margin: 0 auto;
  border-radius: 50px;
  background-color: rgb(255 255 255 / 10%);
  overflow: hidden;
}

.project .nav.nav-pills .nav-item {
  width: 50%;
}

.project .nav.nav-pills .nav-link {
  background-color: transparent;
  border-radius: 0;
  padding: 17px 0;
  color: #fff;
  width: 100%;
  font-size: 17px;
  letter-spacing: 0.8px;
  font-weight: 500;
  position: relative;
  transition: 0.3s ease-in-out;
  text-align: center;
  z-index: 0;
}

.project .nav.nav-pills .nav-link::before {
  content: "";
  position: absolute;
  width: 0;
  height: 100%;
  background: linear-gradient(to right, #fc00ff, #00dbde);
  top: 0;
  left: 0;
  z-index: -1;
  transition: 0.3s ease-in-out;
}

.project .nav.nav-pills .nav-link.active::before {
  width: 100% !important;
}

.project .nav.nav-pills .nav-link.active {
  border: 1px solid rgba(255, 255, 255, 1);
}

.nav-link#projects-tabs-tab-first {
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 55px 0 0 55px;
  overflow: hidden;
}

.nav-link#projects-tabs-tab-second {
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 0 55px 55px 0;
  overflow: hidden;
}

.project-card {
  height: 325px;
}

.proj-img-box {
  height: 100%;
  position: relative;
  border-radius: 30px;
  overflow: hidden;
  margin-bottom: 24px;
  display: flex;
  flex-direction: column;
}

.proj-img-box img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.proj-img-box::before {
  content: "";
  background: linear-gradient(90deg, #fc00ff -5.91%, #00dbde 111.58%);
  opacity: 0.85;
  position: absolute;
  width: 100%;
  height: 0;
  transition: 0.4s ease-in-out;
}

.proj-img-box:hover::before {
  height: 100%;
}
/* ... */

